added members and improved description

--- a/index.7
+++ b/index.7
@@ -4,15 +4,59 @@ edugrp.ch \- Swiss
 .B ed(1)
 user group
 .SH DESCRIPTION
-eudgrp.ch is the Ed User Group Switzerland, the one and only user group for the text editor 
+eudgrp.ch is the
+.IR "Ed User Group Switzerland" ,
+the one and only user group for the text editor 
 .B ed(1)
 in Switzerland.
 .PP
+Why should anybody still use
 .B ed(1)
-is the standard unix text editor.
+in the twenty-first century?
+.PP
+.IR First ,
+.B ed(1)
+is the standard Unix text editor.
+.PP
+.IR Second ,
+if your video terminal breaks down, so that you cannot use your fancy screen-based text editor anymore, you can just pull out your teletypewriter from the basement, and still edit text files using
+.BR ed(1) .
+.PP
+So if you are a
+.BR nano(1)
+user, and need to write a letter of complaint to your local Computer Science professor for using
+.I Comic Sans
+in his
+.I PowerPoint
+slides, or
+.BR gdb(1)
+inside 
+.IR NetBeans ,
+and all of a sudden your screen catches fire,
+.BR "don't come and complain" ,
+but get your
+.I Teletype Model 33
+from the basement, and use
+.B ed(1)
+instead!
 .SH HISTORY
-The Ed User Group Switzerland was founded in November 2019 by two reactionary Computer Science students at
-.URL www.hslu.ch HSLU .
-They had too much exposure of professors suggesting to use NetBeans instead of
-.B vim(1),
-so the students decided to head for the other direction instead.
+The
+.I Ed User Group Switzerland
+was founded in November 2019 by two reactionary Computer Science students at HSLU. They had too much exposure to professors suggesting to use
+.I NetBeans
+instead of
+.BR vim(1) ,
+so the students decided to head for the other direction, and started to use
+.B ed(1)
+instead.
+.SH MEMBERS
+.IP "Pascal Kiser"
+Proficient
+.B ed(1)
+user, software archeologist, and inspirator. Contact:
+.MT pascal.kiser@stud.hslu.ch
+.ME
+.IP "Patrick Bucher"
+Chief troll, software archeologist, and webmaster. Contact:
+.MT patrick.bucher@stud.hslu.ch
+.ME
